Valores obtenidos de las entradas

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div id="datosEntrada">
 			<div id="condIniciales"></div>
 			<div id="coeficientes"></div><br>
-			<input type="button" value="Mostrar Ecuacion" id="btnSolucion">
+			<input type="button" value="Mostrar Ecuacion" id="btnSolucion" onclick="recibirDatos()">
 		</div>
 	</div>
 </body>
