Generado matriz de coeficientes para raices no repetidas

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
 	<title>Solucion ecuaciones en recurrencia</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script type="text/javascript" src="generarEntradas.js"></script>
+	<script type="text/javascript" src="leerDatos.js"></script>
+	<script type="text/javascript" src="DivisionSintetica.js"></script>
+	<script type="text/javascript" src="sistemaEcuaciones.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
