Coeficientes c de la ecuacion encontrados, falta armar la ecuacion final

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 	<script type="text/javascript" src="leerDatos.js"></script>
 	<script type="text/javascript" src="DivisionSintetica.js"></script>
 	<script type="text/javascript" src="sistemaEcuaciones.js"></script>
+	<script type="text/javascript" src="Gauss.js"></script>
 	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="escribirEcuacion.js"></script>
 </head>
 <body>
 	<div class="container">
