Falta corregir conteo de raices rep.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			<div id="coeficientes"></div><br>
 			<input type="button" value="Mostrar Ecuacion" id="btnSolucion" onclick="recibirDatos()">
 		</div>
+		<div id="divSalida"></div>
 	</div>
 </body>
 </html>
